kubernetes/visualizer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visualizer
  labels:
    app: visualizer
spec:
  type: ClusterIP
  selector:
    app: visualizer
  ports:
    - name: http
      port: 80
      targetPort: http
